fix(style): correctly collapse on mobile

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -117,7 +117,8 @@
         }
 
         @media all and (max-width: $tabletBreakpoint) {
-          display: block;
+          display: block !important;
+
           & > *:not(#results-container) {
             display: none !important;
           }
